<resources>
    <string name="app_name">RallyUP</string>
    <string name="event_name"><u>EVENT NAME</u></string>
    <string name="confirm">CONFIRM</string>
    <string name="close">CLOSE</string>
    <string name="send">SEND</string>
    <string name="user_field_firstName">firstName</string>
    <string name="user_field_lastName">lastName</string>
    <string name="user_field_email">email</string>
    <string name="user_field_phone_number">phoneNumber</string>
    <string name="user_field_geolocation">geolocation</string>
    <string name="user_field_profilePicture">profilePicture</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="enable_geolocation_string">Enable Geolocation</string>
    <string name="edit_photo">EDIT PHOTO</string>
    <string name="delete_photo">DELETE PHOTO</string>
    <string name="generated_username">\@ GENERATED USERNAME</string>
    <string name="milestones_title"><u>MILESTONES</u></string>
    <string name="announcements_title"><u>ANNOUNCEMENTS</u></string>
    <string name="notification_edit_title">TITLE OF NOTIFICATION</string>
    <string name="notification_edit_body">Send message to attendees...</string>
    <string name="notification_title_milestone">Milestone</string>
    <string name="notification_title_announcement">Announcement</string>
    <string name="notification_channel_ID_milestone">notification_channel_ID_Milestone</string>
    <string name="notification_channel_ID_announcements">
        notification_channel_ID_announcements
    </string>
    <string name="notification_channel_ID_default">
        notification_channel_ID_default
    </string>
    <string name="notification_channel_name_milestone">Milestone Notifications</string>
    <string name="notification_channel_name_announcements">Announcements Notifications</string>
    <string name="notification_channel_name_default">Notifications in General</string>
    <string name="notification_channel_description_milestone">
        Notifications for Organizers when achieved certain milestones
    </string>
    <string name="notification_channel_description_announcements">
        Notifications that Organizers get to send out as announcements
    </string>
    <string name="notification_channel_description_default">
        Notifications from this app may come from Organizers or Events.
    </string>
    <string name="qr_hint">SCAN QR CODE</string>
    <string name="qr_hint_2">CHECK INTO EVENT</string>
    <string name="qr_main_button">Scan</string>
    <string name="qr_main_text">Temporary String Value</string>
    <string name="qr_test_text">Hello!</string>
    <string name="attendee_details_title">Attendee Details</string>
    <string name="registered_attendees_fixed">registered attendees</string>
    <string name="username_fixed">Username</string>
    <string name="num_of_times_checked_in_fixed"># of Times Checked In</string>
    <string name="verified_check_ins_fixed">Verified Check Ins</string>
    <string name="heat_map_of_attendees_fixed">HeatMap of Attendees</string>
    <string name="event_details">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</string>
    <string name="announcements_fixed">ANNOUNCEMENTS</string>
    <string name="event_location">LOCATION</string>
    <string name="event_date">DATE</string>
    <string name="register_for_event_button">REGISTER FOR EVENT</string>
    <string name="num_of_verified_attendees"># of Verified Attendees</string>
    <string name="num_of_total_attendees"># of Total Attendees</string>
    <string name="view_attendees_button">VIEW ATTENDEES</string>
    <string name="view_check_in_qr_code_button">VIEW CHECK-IN QR CODE</string>
    <string name="title_of_notification">TITLE OF NOTIFICATION</string>
    <string name="organizer_events_title">Organizer EVENTS</string>
    <string name="attending_button">ATTENDING</string>
    <string name="organizing_button">ORGANIZING</string>
    <string name="upload_poster">UPLOAD POSTER</string>
    <string name="title_activity_admin_homepage">AdminHomepageActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>