<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityOrgEventDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/organizer_gradient"
    tools:context=".uiReference.organizers.OrganizerEventDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/organizer_details_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:contentDescription="Back Button"
                android:src="@drawable/back_arrow" />

            <TextView
                android:id="@+id/org_event_details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_extrabold"
                android:text="@string/event_name"
                android:textColor="@color/darkColor"
                android:textSize="40sp" />
        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/org_event_details_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundedCornersTop" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/rectangle_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/lightColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    android:background="@drawable/rounded_border">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/linearLayout2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="15dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/calendarimg"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="20dp"
                                app:srcCompat="@drawable/date_calendar" />

                            <TextView
                                android:id="@+id/org_event_details_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_semibold"
                                android:text="@string/event_date"
                                android:textColor="@color/darkColor" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toTopOf="@+id/org_register_event_details"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                            <ImageView
                                android:id="@+id/personimg"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginEnd="20dp"
                                app:srcCompat="@drawable/icon_person" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/verifed_attendees"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="21dp"
                                    android:fontFamily="@font/inter_semibold"
                                    android:text="@string/num_of_verified_attendees"
                                    android:textColor="@color/darkColor" />

                                <TextView
                                    android:id="@+id/total_attendees"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="30dp"
                                    android:fontFamily="@font/inter_semibold"
                                    android:text="@string/num_of_total_attendees"
                                    android:textColor="@color/darkColor" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout4"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:padding="15dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                            <ImageView
                                android:id="@+id/locationimg"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="20dp"
                                app:srcCompat="@drawable/location" />

                            <TextView
                                android:id="@+id/org_event_details_location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_semibold"
                                android:text="@string/event_location"
                                android:textColor="@color/darkColor" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/event_attendees_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/accentColorGreen"
                            android:text="@string/view_attendees_button"
                            android:textColor="@color/lightColor"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.497"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/org_register_event_details"
                            app:layout_constraintVertical_bias="0.059" />

                        <TextView
                            android:id="@+id/org_register_event_details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="10dp"
                            android:text="@string/event_details"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/shareButton"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/transparent"
                            android:clickable="true"
                            android:foregroundTint="@color/transparent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.049"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/org_register_event_details"
                            app:layout_constraintVertical_bias="0.451"
                            app:srcCompat="?attr/actionModeShareDrawable"
                            app:tint="@color/darkColor" />

                        <Button
                            android:id="@+id/view_qr_code_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:backgroundTint="@color/accentColorGreen"
                            android:text="@string/view_check_in_qr_code_button"
                            android:textColor="@color/lightColor"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/event_attendees_button" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_extrabold"
                        android:gravity="center_horizontal"
                        android:text="MILESTONES"
                        android:textColor="@color/darkColor"
                        android:textSize="30sp" />

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:background="@color/transparent"
                        android:clickable="true"
                        android:contentDescription="Milestone button"
                        android:paddingStart="10dp"
                        app:srcCompat="@drawable/milestones" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/progressBarConstraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/progressBar3"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="237dp"
                        android:layout_height="38dp"
                        android:max="100"
                        android:maxWidth="48dip"
                        android:progressDrawable="@drawable/progressbar_progressable"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/progressBarOverlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/milestone_check_overlay"
                        tools:layout_editor_absoluteX="87dp"
                        tools:layout_editor_absoluteY="-46dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    android:background="@drawable/rounded_border">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/org_send_notification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/accentColorGreen"
                            android:text="@string/send"
                            android:textColor="@color/lightColor"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.955"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.95" />

                        <EditText
                            android:id="@+id/notification_details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:gravity="start|top"
                            android:hint="@string/notification_edit_body"
                            android:inputType="textMultiLine"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.132"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.638" />

                        <EditText
                            android:id="@+id/notification_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/title_of_notification"
                            android:inputType="text"
                            app:layout_constraintBottom_toTopOf="@+id/notification_details"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.132"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.363" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </FrameLayout>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>
</ScrollView>